--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -15,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:src="@drawable/start_image"
+            android:src="@drawable/budget_image"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
@@ -28,62 +29,67 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivBackground" />
 
-        <TextView
-            android:id="@+id/tvHello"
-            style="@style/TextViewSize18Hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/start_hello"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivBackground" />
 
         <TextView
             android:id="@+id/tvTitle"
             style="@style/TitleText"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
-            android:text="@string/start_title"
-            app:layout_constraintStart_toStartOf="@id/tvHello"
-            app:layout_constraintTop_toBottomOf="@id/tvHello" />
+            android:layout_marginEnd="32dp"
+            android:text="@string/budget_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivBackground"
+            app:layout_goneMarginTop="12dp" />
 
         <TextView
-            android:id="@+id/tvLabel"
-            style="@style/LabelText"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvPriceRange"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:labelFor="@id/etPhoneNumber"
-            android:text="@string/sign_in_phone_number"
-            app:layout_constraintStart_toStartOf="@id/etPhoneNumber"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginTop="64dp"
+            style="@style/SubTitleText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            tools:text="$0 - 10 000$" />
 
-        <EditText
-            android:id="@+id/etPhoneNumber"
+
+        <ru.codeoverflow.junctionhack.ui.RubberRangePicker
+            android:id="@+id/seekBarPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginTop="8dp"
-            android:inputType="phone"
-            app:layout_constraintTop_toBottomOf="@id/tvLabel" />
+            android:layout_marginTop="40dp"
+            app:defaultThumbInsideColor="@color/white"
+            app:defaultThumbRadius="17dp"
+            app:elasticBehavior="cubic"
+            app:highlightDefaultThumbOnTouchColor="@color/purple_b09"
+            app:highlightTrackColor="@color/white"
+            app:highlightTrackWidth="13dp"
+            app:layout_constraintTop_toBottomOf="@id/tvPriceRange"
+            app:maxValue="100000"
+            app:minValue="0"
+            app:normalTrackColor="@color/white"
+            app:normalTrackWidth="13dp" />
 
         <Button
-            android:id="@+id/btnSignIn"
+            android:id="@+id/btnNext"
             style="@style/BaseButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
+            android:text="@string/common_next"
             android:layout_marginTop="32dp"
-            android:text="@string/sign_in_button"
-            app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />
+            app:layout_constraintTop_toBottomOf="@id/seekBarPrice" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
-
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@id/btnNext"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
