--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -5,17 +5,15 @@
 
 
     <item
-        android:id="@+id/address"
-        android:title="1"
-        android:orderInCategory="100"/>
-
-    <item
-        android:id="@+id/scanner"
-        android:title="1"
-        android:orderInCategory="100" />
-
-    <item
-        android:id="@+id/statistic"
+        android:id="@+id/tours"
+        android:icon="@drawable/ic_tours"
         android:orderInCategory="100"
-        android:title="1"/>
+        android:title="@string/bottom_menu_tours" />
+
+    <item
+        android:id="@+id/profile"
+        android:icon="@drawable/ic_profile"
+        android:orderInCategory="100"
+        android:title="@string/bottom_menu_profile" />
+
 </menu>
