--- a/app/src/main/res/navigation/tours.xml
+++ b/app/src/main/res/navigation/tours.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scanner"
-    app:startDestination="@id/scannerFragment">
+    android:id="@+id/tours"
+    app:startDestination="@id/toursFragment">
     <fragment
-        android:id="@+id/scannerFragment">
+        android:id="@+id/toursFragment"
+        android:name="ru.codeoverflow.junctionhack.ui.fragment.tours.ToursFragment">
+
     </fragment>
 
 </navigation>
