--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -66,7 +66,7 @@
             app:defaultThumbInsideColor="@color/white"
             app:defaultThumbRadius="17dp"
             app:elasticBehavior="cubic"
-            app:highlightDefaultThumbOnTouchColor="@color/purple_b09"
+            app:highlightDefaultThumbOnTouchColor="@color/main_color"
             app:highlightTrackColor="@color/white"
             app:highlightTrackWidth="13dp"
             app:layout_constraintTop_toBottomOf="@id/tvPriceRange"
