--- a/app/src/main/res/layout/fragment_tours.xml
+++ b/app/src/main/res/layout/fragment_tours.xml
@@ -18,6 +18,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/tours_title"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
