--- a/app/src/main/res/layout/rv_tours_item.xml
+++ b/app/src/main/res/layout/rv_tours_item.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true"
     android:layout_marginTop="16dp"
-    app:cardCornerRadius="10dp"
-    android:focusable="true">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,29 +24,70 @@
             tools:src="@color/black" />
 
         <TextView
+            android:id="@+id/tvType"
+            style="@style/TextViewSize10MainRegular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_tour_type"
+            android:paddingHorizontal="32dp"
+            android:paddingVertical="7dp"
+            app:layout_constraintEnd_toEndOf="@id/ivIcon"
+            app:layout_constraintTop_toTopOf="@id/ivIcon"
+            tools:text="Sights" />
+
+        <TextView
             android:id="@+id/tvTitle"
+            style="@style/TextViewSize14BlackBold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
-            tools:text="Топ-10 концертов за 2019"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivIcon" />
+            app:layout_constraintTop_toBottomOf="@id/ivIcon"
+            tools:text="Топ-10 концертов за 2019" />
 
         <TextView
             android:id="@+id/tvDescription"
+            style="@style/TextViewSize12Hint"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            tools:text="Мы с редакцией по уже сложившейся доброй традиции вспомнили лучшие концерты за прошедший год."
-            android:maxLines="2"
             android:ellipsize="end"
-            android:paddingBottom="12dp"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            android:maxLines="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            tools:text="Мы с редакцией по уже сложившейся доброй традиции вспомнили лучшие концерты за прошедший год." />
+
+        <TextView
+            android:id="@+id/tvRating"
+            style="@style/TextViewSize12MainRegular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/tours_rating"
+            app:layout_constraintStart_toStartOf="@id/tvDescription"
+            app:layout_constraintTop_toBottomOf="@id/tvDescription" />
+
+        <androidx.appcompat.widget.AppCompatRatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            style="@style/RatingBarMain"
+            android:stepSize="1"
+            android:isIndicator="true"
+            android:rating="3"
+            app:layout_constraintBottom_toBottomOf="@id/tvRating"
+            app:layout_constraintStart_toEndOf="@id/tvRating"
+            app:layout_constraintTop_toTopOf="@id/tvRating" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/tvRating" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
