--- a/app/src/main/res/values/base_widgets.xml
+++ b/app/src/main/res/values/base_widgets.xml
@@ -33,4 +33,16 @@
         <item name="android:paddingBottom">0dp</item>
         <!--<item name="android:fontFamily">@font/graphik_medium</item>-->
     </style>
+
+    <style name="RatingBarMain">
+        <item name="android:progressDrawable">@drawable/ic_rating_main</item>
+        <item name="android:minWidth">15dp</item>
+        <item name="android:minHeight">15dp</item>
+    </style>
+
+    <style name="RatingBarWhite">
+        <item name="android:progressDrawable">@drawable/ic_rating_white</item>
+        <item name="android:minWidth">30dp</item>
+        <item name="android:minHeight">30dp</item>
+    </style>
 </resources>
