--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -9,6 +9,10 @@
         <item name="android:fontFamily">@font/monsterrat_bold</item>
     </style>
 
+    <style name="BaseSemiBold">
+        <item name="android:fontFamily">@font/montserrat_semibold</item>
+    </style>
+
     <style name="BaseExtraBold">
         <item name="android:fontFamily">@font/monsterrat_extrabold</item>
     </style>
@@ -32,7 +36,7 @@
         <item name="android:textColor">@color/hint_color</item>
         <item name="android:textSize">14sp</item>
     </style>
-    
+
     <style name="TextViewSize14BlackBold" parent="BaseBold">
         <item name="android:textColor">@color/title_color</item>
         <item name="android:textSize">14sp</item>
@@ -44,5 +48,35 @@
 
     <style name="TextViewSize18Hint" parent="HintText">
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextViewSize12MainRegular" parent="BaseRegular">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/main_color</item>
+    </style>
+
+    <style name="TextViewSize18WhiteRegular" parent="BaseRegular">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="TextViewSize29WhiteBold" parent="BaseBold">
+        <item name="android:textSize">29sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="TextViewSize10MainRegular" parent="BaseRegular">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">@color/main_color</item>
+    </style>
+
+    <style name="TextViewSize16BlackRegular" parent="BaseRegular">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/title_color</item>
+    </style>
+
+    <style name="TextViewSize16WhiteSemiBold" parent="BaseSemiBold">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
