--- a/app/src/main/res/layout/fragment_tours.xml
+++ b/app/src/main/res/layout/fragment_tours.xml
@@ -13,12 +13,12 @@
 
         <TextView
             android:id="@+id/tvTitle"
+            style="@style/TitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/tours_title"
-            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,15 +35,104 @@
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             tools:ignore="RtlSymmetry" />
 
+        <EditText
+            android:id="@+id/etStartDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:maxLength="6"
+            android:paddingStart="19dp"
+            android:paddingEnd="19dp"
+            app:layout_constraintStart_toStartOf="@id/etSearch"
+            app:layout_constraintTop_toBottomOf="@id/etSearch"
+            tools:hint="19 Dec" />
+
+        <View
+            android:id="@+id/viewLine"
+            android:layout_width="12dp"
+            android:layout_height="4dp"
+            android:layout_marginStart="7dp"
+            android:background="@drawable/bg_tour_date_line"
+            app:layout_constraintBottom_toBottomOf="@id/etStartDate"
+            app:layout_constraintStart_toEndOf="@id/etStartDate"
+            app:layout_constraintTop_toTopOf="@id/etStartDate" />
+
+        <EditText
+            android:id="@+id/etEndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="7dp"
+            android:maxLength="6"
+            android:paddingStart="19dp"
+            android:paddingEnd="19dp"
+            app:layout_constraintStart_toEndOf="@id/viewLine"
+            app:layout_constraintTop_toTopOf="@id/etStartDate"
+            tools:hint="19 Dec" />
+
+
+        <Button
+            android:id="@+id/btnChange"
+            style="@style/BaseButton"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/common_change"
+            app:layout_constraintBottom_toBottomOf="@id/etEndDate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/etEndDate"
+            app:layout_constraintTop_toTopOf="@id/etEndDate" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/calendarView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/rvMonth" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMonth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:clipToPadding="false"
+            android:orientation="horizontal"
+            android:paddingStart="16dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="14dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/btnChange" />
+
+        <include
+            android:id="@+id/weekDayLayout"
+            layout="@layout/calendar_week_day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/rvMonth" />
+
+        <com.kizitonwose.calendarview.CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:cv_dayViewResource="@layout/text_view_day_calendar"
+            app:cv_inDateStyle="allMonths"
+            app:cv_orientation="horizontal"
+            app:cv_outDateStyle="endOfRow"
+            app:cv_scrollMode="paged"
+            app:layout_constraintTop_toBottomOf="@id/weekDayLayout" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTours"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@id/etSearch"
+            app:layout_constraintTop_toBottomOf="@id/calendarView"
             tools:listitem="@layout/rv_tours_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
