--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -50,6 +50,17 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="TextViewSize18BlackRegular" parent="BaseRegular">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextViewSize18Black50Regular" parent="BaseRegular">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black_50</item>
+    </style>
+
+
     <style name="TextViewSize12MainRegular" parent="BaseRegular">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/main_color</item>
@@ -79,4 +90,6 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+
 </resources>
