--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -57,7 +57,7 @@
             tools:text="$0 - 10 000$" />
 
 
-        <ru.codeoverflow.junctionhack.ui.RubberRangePicker
+        <ru.codeoverflow.junctionhack.ui.view.RubberRangePicker
             android:id="@+id/seekBarPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
