--- a/app/src/main/res/layout/fragment_tours.xml
+++ b/app/src/main/res/layout/fragment_tours.xml
@@ -40,12 +40,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="false"
+            android:gravity="center"
+            android:hint="@string/tours_date_hint"
             android:maxLength="6"
+            android:inputType="textNoSuggestions"
+            android:minWidth="60dp"
             android:paddingStart="19dp"
             android:paddingEnd="19dp"
             app:layout_constraintStart_toStartOf="@id/etSearch"
             app:layout_constraintTop_toBottomOf="@id/etSearch"
-            tools:hint="19 Dec" />
+            tools:ignore="TextFields" />
 
         <View
             android:id="@+id/viewLine"
@@ -62,13 +69,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="7dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="false"
+            android:gravity="center"
+            android:inputType="textNoSuggestions"
+            android:hint="@string/tours_date_hint"
             android:maxLength="6"
+            android:minWidth="60dp"
             android:paddingStart="19dp"
             android:paddingEnd="19dp"
             app:layout_constraintStart_toEndOf="@id/viewLine"
             app:layout_constraintTop_toTopOf="@id/etStartDate"
-            tools:hint="19 Dec" />
-
+            tools:ignore="TextFields" />
 
         <Button
             android:id="@+id/btnChange"
@@ -91,6 +104,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/rvMonth" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/groupCalendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:constraint_referenced_ids="rvMonth,weekDayLayout,calendarView" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMonth"
