--- a/app/src/main/res/layout/rv_detail_tour_item.xml
+++ b/app/src/main/res/layout/rv_detail_tour_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/ivIcon"
         android:layout_width="104dp"
         android:layout_height="104dp"
+        android:scaleType="fitXY"
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewTopLine"
@@ -67,6 +68,7 @@
         tools:text="Big sandy beach" />
 
     <TextView
+        android:id="@+id/tvDescription"
         style="@style/TextViewSize12Hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
