--- a/app/src/main/res/layout/rv_tours_item.xml
+++ b/app/src/main/res/layout/rv_tours_item.xml
@@ -72,16 +72,38 @@
 
         <androidx.appcompat.widget.AppCompatRatingBar
             android:id="@+id/ratingBar"
+            style="@style/RatingBarMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            style="@style/RatingBarMain"
-            android:stepSize="1"
             android:isIndicator="true"
             android:rating="3"
+            android:stepSize="1"
             app:layout_constraintBottom_toBottomOf="@id/tvRating"
             app:layout_constraintStart_toEndOf="@id/tvRating"
             app:layout_constraintTop_toTopOf="@id/tvRating" />
+
+        <TextView
+            android:id="@+id/tvPriceLabel"
+            style="@style/TextViewSize12MainRegular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tours_price"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@id/tvPrice"
+            app:layout_constraintTop_toTopOf="@id/tvPrice"
+            app:layout_constraintBottom_toBottomOf="@id/tvPrice"/>
+
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            tools:text="12 000$"
+            style="@style/TextViewSize13BlackBold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvRating"
+            app:layout_constraintBottom_toBottomOf="@id/tvRating"/>
 
         <Space
             android:layout_width="match_parent"
