--- a/app/src/main/res/layout/text_view_day_calendar.xml
+++ b/app/src/main/res/layout/text_view_day_calendar.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/calendarDayText"
-    style="@style/TextViewSize16BlackRegular"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    tools:text="1" />
+    android:layout_height="match_parent">
+
+
+    <TextView
+        android:id="@+id/calendarDayText"
+        style="@style/TextViewSize16BlackRegular"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="1dp"
+        android:gravity="center"
+        tools:text="1" />
+</FrameLayout>
