--- a/app/src/main/res/navigation/tours.xml
+++ b/app/src/main/res/navigation/tours.xml
@@ -6,7 +6,18 @@
     <fragment
         android:id="@+id/toursFragment"
         android:name="ru.codeoverflow.junctionhack.ui.fragment.tours.ToursFragment">
+        <action
+            android:id="@+id/action_toursFragment_to_detailTourFragment"
+            app:destination="@id/detailTourFragment" />
+    </fragment>
 
+    <fragment
+        android:id="@+id/detailTourFragment"
+        android:name="ru.codeoverflow.junctionhack.ui.fragment.detailtour.DetailTourFragment">
+
+        <argument
+            android:name="tourId"
+            app:argType="string" />
     </fragment>
 
 </navigation>
