--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -91,5 +91,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="TextViewSize13BlackBold" parent="BaseBold">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/title_color</item>
+    </style>
+
 
 </resources>
