--- a/app/src/main/res/layout/fragment_tour_detail.xml
+++ b/app/src/main/res/layout/fragment_tour_detail.xml
@@ -101,7 +101,7 @@
 
         <TextView
             android:id="@+id/tvDescription"
-            style="@style/TextViewSize16BlackRegular"
+            style="@style/TextViewSize16TitleRegular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -124,7 +124,7 @@
 
         <TextView
             android:id="@+id/tvParticipants"
-            style="@style/TextViewSize16BlackRegular"
+            style="@style/TextViewSize16TitleRegular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -165,5 +165,31 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rvTourStep" />
+
+        <Button
+            android:id="@+id/btnBuy"
+            style="@style/BaseButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/tour_detail_buy"
+            app:layout_constraintTop_toBottomOf="@id/tvTicketsTitle" />
+
+        <Button
+            android:id="@+id/btnFavorite"
+            style="@style/BaseButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="12dp"
+            android:text="@string/tour_detail_favorite"
+            app:layout_constraintTop_toBottomOf="@id/btnBuy" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            app:layout_constraintTop_toBottomOf="@id/btnFavorite" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
