--- a/app/src/main/res/navigation/profile.xml
+++ b/app/src/main/res/navigation/profile.xml
@@ -6,6 +6,19 @@
 
     <fragment
         android:id="@+id/profileFragment"
-        android:name="ru.codeoverflow.junctionhack.ui.fragment.profile.ProfileFragment" />
+        android:name="ru.codeoverflow.junctionhack.ui.fragment.profile.ProfileFragment" >
+        <action
+            android:id="@+id/action_profileFragment_to_detailTourFragment"
+            app:destination="@id/detailTourFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailTourFragment"
+        android:name="ru.codeoverflow.junctionhack.ui.fragment.detailtour.DetailTourFragment">
+
+        <argument
+            android:name="tourId"
+            app:argType="string" />
+    </fragment>
 </navigation>
 
