--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -37,7 +37,7 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="TextViewSize14BlackBold" parent="BaseBold">
+    <style name="TextViewSize14TitleBold" parent="BaseBold">
         <item name="android:textColor">@color/title_color</item>
         <item name="android:textSize">14sp</item>
     </style>
@@ -55,6 +55,11 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="TextViewSize18TitleBold" parent="BaseBold">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/title_color</item>
+    </style>
+
     <style name="TextViewSize18Black50Regular" parent="BaseRegular">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black_50</item>
@@ -66,6 +71,10 @@
         <item name="android:textColor">@color/main_color</item>
     </style>
 
+    <style name="TextViewSize18MainBold" parent="BaseBold">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/main_color</item>
+    </style>
     <style name="TextViewSize18WhiteRegular" parent="BaseRegular">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/white</item>
@@ -81,7 +90,7 @@
         <item name="android:textColor">@color/main_color</item>
     </style>
 
-    <style name="TextViewSize16BlackRegular" parent="BaseRegular">
+    <style name="TextViewSize16TitleRegular" parent="BaseRegular">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/title_color</item>
     </style>
@@ -91,10 +100,14 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="TextViewSize13BlackBold" parent="BaseBold">
+    <style name="TextViewSize13TitleBold" parent="BaseBold">
         <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/title_color</item>
     </style>
 
+    <style name="TextViewSize20BlackBold" parent="BaseBold">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 </resources>
