--- a/app/src/main/res/layout/fragment_confirm_code.xml
+++ b/app/src/main/res/layout/fragment_confirm_code.xml
@@ -86,6 +86,16 @@
             app:layout_constraintTop_toBottomOf="@id/etPinCode"
             android:layout_marginTop="32dp"/>
 
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
