--- a/app/src/main/res/layout/fragment_tour_detail.xml
+++ b/app/src/main/res/layout/fragment_tour_detail.xml
@@ -166,6 +166,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rvTourStep" />
 
+        <include
+            android:id="@+id/viewTicket"
+            layout="@layout/view_ticket"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/tvTicketsTitle"/>
+
         <Button
             android:id="@+id/btnBuy"
             style="@style/BaseButton"
@@ -174,7 +183,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
             android:text="@string/tour_detail_buy"
-            app:layout_constraintTop_toBottomOf="@id/tvTicketsTitle" />
+            app:layout_constraintTop_toBottomOf="@id/viewTicket" />
 
         <Button
             android:id="@+id/btnFavorite"
