--- a/app/src/main/res/layout/rv_interests_item.xml
+++ b/app/src/main/res/layout/rv_interests_item.xml
@@ -30,8 +30,9 @@
     <TextView
         android:id="@+id/tvName"
         style="@style/TextViewSize11TitleBold"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="@id/ivItem"
         app:layout_constraintStart_toStartOf="@id/ivItem"
