--- a/app/src/main/res/navigation/profile.xml
+++ b/app/src/main/res/navigation/profile.xml
@@ -17,8 +17,8 @@
         android:name="ru.codeoverflow.junctionhack.ui.fragment.detailtour.DetailTourFragment">
 
         <argument
-            android:name="tourId"
-            app:argType="string" />
+            android:name="tourModel"
+            app:argType="ru.codeoverflow.junctionhack.entity.tours.TourModel" />
     </fragment>
 </navigation>
 
