--- a/app/src/main/res/layout/fragment_tours.xml
+++ b/app/src/main/res/layout/fragment_tours.xml
@@ -124,6 +124,7 @@
             android:paddingStart="16dp"
             android:paddingTop="16dp"
             android:paddingEnd="14dp"
+            android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/btnChange" />
 
@@ -156,6 +157,16 @@
             android:paddingBottom="16dp"
             app:layout_constraintTop_toBottomOf="@id/calendarView"
             tools:listitem="@layout/rv_tours_item" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
