--- a/app/src/main/res/layout/fragment_tours.xml
+++ b/app/src/main/res/layout/fragment_tours.xml
@@ -89,6 +89,7 @@
             style="@style/BaseButton"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:text="@string/common_change"
